Last-child section

--- a/index.html
+++ b/index.html
@@ -49,8 +49,14 @@
                         <input class="contaner__info text" type="password" tabindex="7" name="" id="password" placeholder="Пароль">
                     </div>
                 </div>
-                <div class="contaner__section">
+                <div class="contaner__section text">
                     <input class="contaner__btn" type="button" value="перейти к оплате">
+                </div>
+                <div class="contaner__section">
+                    <span class="contaner__text">Уже есть аккаунт на Toxin</span>
+                    <span class="contaner__color">
+                        <input class="contaner__enter" type="button" value="войти">
+                    </span>
                 </div>
             </div>
         </form>
