--- a/log in.html
+++ b/log in.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/log in.css">
+    <title>log in</title>
 </head>
 <body>
     <div class="contaner">
@@ -21,13 +21,19 @@
                         <input class="contaner__info text" type="text" tabindex="2" name="lastName"placeholder="Фамилия">
                     </div>
                     <div class="contaner__inblck">
-                        <div class="contaner__radio-lable">
-                            <p><input class="contaner__sex" type="radio" tabindex="3" name="sex" id=""> Мужчина </p>
-                        </div>
+                        <label class="contaner__radio-lable" for="radio1">
+                            <input class="contaner__sex inp" type="radio" tabindex="3" name="sex" id="radio1">
+                            <span class="contaner__inp-man">
+                                Мужчина
+                            </span> 
+                        </label>
                         
-                        <div class="contaner__radio-lable">
-                            <p><input class="contaner__sex" type="radio" tabindex="4" name="sex" id=""> Женщина </p>
-                        </div>
+                        <label class="contaner__radio-lable" for="radio2">
+                            <input class="contaner__sex inp" type="radio" tabindex="3" name="sex" id="radio2">
+                            <span class="contaner__inp-woman">
+                                Женщина 
+                            </span> 
+                        </label>
                     </div>
                 </div>
                 <div class="contaner__section">
@@ -48,6 +54,14 @@
                     <div>
                         <input class="contaner__info text" type="password" tabindex="7" name="" id="password" placeholder="Пароль">
                     </div>
+                </div>
+                <div class="contaner__section contaner__lable">
+                    <label class="checkbox" for="checkbox">
+                        <input class="checkbox__inp" type="checkbox" id="checkbox">
+                        <span class="checkbox__text">
+                            Получать спецпредложения
+                        </span>
+                    </label>
                 </div>
                 <div class="contaner__section text">
                     <input class="contaner__btn" type="button" value="перейти к оплате">
