Upgrade page and link

--- a/log in.html
+++ b/log in.html
@@ -49,7 +49,7 @@
                         <h3>данные для входа в сервис</h3>
                     </div>    
                     <div>
-                        <input class="contaner__info text" type="text" tabindex="6" name="Gmail" id="" placeholder="Gmail">
+                        <input class="contaner__info text" type="text" tabindex="6" name="Email" id="" placeholder="Email">
                     </div>
                     <div>
                         <input class="contaner__info text" type="password" tabindex="7" name="" id="password" placeholder="Пароль">
@@ -68,8 +68,8 @@
                 </div>
                 <div class="contaner__section">
                     <span class="contaner__text">Уже есть аккаунт на Toxin</span>
-                    <span class="contaner__color">
-                        <input class="contaner__enter" type="button" value="войти">
+                    <span >
+                        <a class="contaner__enter" href="log up.html">войти</a>
                     </span>
                 </div>
             </div>
