--- a/log up.html
+++ b/log up.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/log up.css">
     <title>log up</title>
 </head>
 <body>
-    
+    <div class="contaner">
+        <form class="contaner__form" action="#">
+            <div class="contaner__block">    
+                <div class="contaner__section log-up">
+                    <div class="enter">
+                        <h1>Войти</h1>
+                    </div>    
+                    <div class="contaner__email">
+                        <input class="contaner__info text" type="text" tabindex="1" name="Email" id="" placeholder="Email">
+                    </div>
+                    <div class="contaner__password">
+                        <input class="contaner__info text" type="password" tabindex="2" name="" id="password" placeholder="Пароль">
+                    </div>
+                </div>
+                <div class="contaner__section text">
+                    <input class="contaner__btn" type="button" value="Войти">
+                </div>
+                <div class="contaner__section">
+                    <span class="contaner__text">Нет аккаунта на Toxin</span>
+                    <span >
+                           <a class="contaner__enter" href="log in.html">создать</a>
+                    </span>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
