Update nav page

--- a/nav.html
+++ b/nav.html
@@ -7,12 +7,24 @@
     <title>TOXIN</title>
 </head>
 <body>
+
+
     <header>
+
+        <div class="contaner__logo-gray">
+            <img src="foto/logo__gray.svg" alt="картинка">
+        </div>
+
         <div class="contaner">
             <div class="contaner__for-all">
                         <!-- Лого -->
                  <span class="contaner__logo">
-                    <p class="logo">toxin</p>
+                    <span class="contaner__avatar">
+                        <div class="avatar">
+                            <img src="foto/logo__light.svg" alt="картинка">
+                        </div>
+                    </span>
+                    <img class="logo" src="foto/TOXIN.svg" alt="Название логотипа">
                 </span>
                         <!-- Список -->
                 <nav class="contaner__list">
@@ -36,5 +48,50 @@
             </div>
         </div>
     </header>
+
+    <footer>
+        <div class="contaner__footer">
+            <div class="contaner__menu">
+                <div class="contaner__text box">
+                    <img src="foto/Logo__footer.svg" alt=" каритнка">
+                    <p class="contaner__hotel text">Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»</p>
+                </div>
+                <div class="contaner__nav box">
+                    <ul class="list">
+                        <li class="item bold">Навигация</li>
+                        <li class="item">О нас</li>
+                        <li class="item">Новости</li>
+                        <li class="item">Служба поддержки</li>
+                        <li class="item">Услуги</li>
+                    </ul>
+                </div>
+                <div class="contaner__nav box">
+                    <ul class="list">
+                        <li class="item bold">О нас</li>
+                        <li class="item">О сервисе</li>
+                        <li class="item">Наша команда</li>
+                        <li class="item">Ваканси</li>
+                        <li class="item">Инвесторы</li>
+                    </ul>
+                </div>
+                <div class="contaner__nav box">
+                    <ul class="list">
+                        <li class="item bold">Служба поддержки</li>
+                        <li class="item">Соглашения</li>
+                        <li class="item">Сообщества</li>
+                        <li class="item">Связь с нами</li>
+                    </ul>
+                </div>
+                <div class="contaner__text">
+                    <p class="text__up">Подписка</p>
+                    <p class="text__text">Получайте специальные предложения и новости сервиса</p>
+                    <div class="contaner__email">
+                        <input class="contaner__info text" type="text" tabindex="1" name="Email" id="" placeholder="Email">
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
