--- a/log in.html
+++ b/log in.html
@@ -63,13 +63,16 @@
                         </span>
                     </label>
                 </div>
-                <div class="contaner__section text">
+                <div class="contaner__section btn">
                     <input class="contaner__btn" type="button" value="перейти к оплате">
+                    <button class="contaner__pay">
+                        <img class="contaner__arr" src="foto__nav/arrow_white.svg" alt="картинка">
+                    </button>
                 </div>
                 <div class="contaner__section">
                     <span class="contaner__text">Уже есть аккаунт на Toxin</span>
-                    <span >
-                        <a class="contaner__enter" href="log up.html">войти</a>
+                    <span>
+                        <button class="box__gradient" onclick="document.location='log up.html'">войти</button>
                     </span>
                 </div>
             </div>
