--- a/log up.html
+++ b/log up.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="contaner">
-        <form class="contaner__form" action="#">
+        <!-- <form class="contaner__form" action="#"> -->
             <div class="contaner__block">    
                 <div class="contaner__section log-up">
                     <div class="enter">
@@ -21,17 +21,21 @@
                         <input class="contaner__info text" type="password" tabindex="2" name="" id="password" placeholder="Пароль">
                     </div>
                 </div>
-                <div class="contaner__section text">
+                <div class="contaner__section btn">
                     <input class="contaner__btn" type="button" value="Войти">
+                    <button class="contaner__pay">
+                        <img class="contaner__arr" src="foto__nav/arrow_white.svg" alt="картинка">
+                    </button>
                 </div>
                 <div class="contaner__section">
                     <span class="contaner__text">Нет аккаунта на Toxin</span>
-                    <span >
-                           <a class="contaner__enter" href="log in.html">создать</a>
+                    <span>
+                        <button class="box__gradient" onclick="document.location='log in.html'">создать</button>
                     </span>
+                    
                 </div>
             </div>
-        </form>
+        <!-- </form> -->
     </div>
 </body>
 </html>
