Sort scss/css footer and header

--- a/log in.html
+++ b/log in.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="contaner">
-        <form class="contaner__form" action="">
+        <!-- <form class="contaner__form" action=""> -->
             <div class="contaner__block">
                 <div class="contaner__section">
                     <div>
@@ -76,7 +76,7 @@
                     </span>
                 </div>
             </div>
-        </form>
+        <!-- </form> -->
     </div>
 </body>
 </html>
